FireAlarmApplication.Web/mtg_debug_20260127_163302.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:33:02
NetCDF: C:\Users\kubil\AppData\Local\Temp\be1f1b25-d512-46d2-a387-c2dbede15906.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
